--- a/Angular/AngularRouting/src/app/details/details.component.html
+++ b/Angular/AngularRouting/src/app/details/details.component.html
@@ -1,6 +1,9 @@
-<h1>{{user$.name}}</h1>
-<ul>
-  <li><strong>Username: </strong>{{user$.username}}</li>
-  <li><strong>EMail: </strong>{{user$.email}}</li>
-  <li><strong>Phone: </strong>{{user$.phone}}</li>
-</ul>
+<div *ngIf="user$">
+  <h1>{{user$.name}}</h1>
+  <ul>
+    <li><strong>Username: </strong>{{user$.username}}</li>
+    <li><strong>EMail: </strong>{{user$.email}}</li>
+    <li><strong>Phone: </strong>{{user$.phone}}</li>
+  </ul>
+</div>
+
